testdata/zkc/invalid/if_invalid_01.zkc
;;error:4:8-9:unknown comparator
function f(u8 x) -> (u8 r) {
  r = 0
  if x = 0 {
    r = 1
    return
  }
  return
}
